--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,7 +17,14 @@
 {% assign locale = site.default_locale %}
 {% endunless %}
 
-<span></span>
+<div id="header_image"></div>
+<div id="next" onclick="javascript:switch_image(1);">
+  <div class="bold centered huge symbol">&#xf429;</div>
+</div>
+<div id="previous" onclick="javascript:switch_image(-1);">
+  <div class="bold centered huge symbol">&#xf430;</div>
+</div>
+
 <label for="header_switcher">
   <div class="circle" id="hide_show"></div>
 </label>
