--- a/css/main.css
+++ b/css/main.css
@@ -102,8 +102,14 @@ input, select {
   -webkit-box-shadow: 0 0 10px black;
   box-shadow: 0 0 10px black; }
 
+.bold {
+  font-weight: bold; }
+
 .disabled {
   opacity: 0.25; }
+
+.huge {
+  font-size: 3em; }
 
 .left {
   float: left; }
@@ -214,7 +220,7 @@ header {
   transition: all 0.5s;
   width: 100%;
   padding-top: 20%; }
-  header span {
+  header #header_image {
     background-image: url("/media/photo/04.jpg");
     background-position: center;
     background-repeat: no-repeat;
@@ -225,6 +231,36 @@ header {
     bottom: 0;
     left: 0;
     right: 0; }
+  header #next, header #previous {
+    bottom: 0;
+    color: white;
+    cursor: pointer;
+    display: block;
+    min-width: 50px;
+    opacity: 0.25;
+    position: absolute;
+    width: 5%;
+    top: 0;
+    -ms-transition: opacity 0.5s;
+    -moz-transition: opacity 0.5s;
+    -o-transition: opacity 0.5s;
+    -webkit-transition: opacity 0.5s;
+    transition: opacity 0.5s; }
+    header #next:hover, header #previous:hover {
+      opacity: 0.75; }
+  header #next {
+    right: 0;
+    text-align: left; }
+  header #previous {
+    left: 0;
+    text-align: right; }
+  header .centered {
+    line-height: 1em;
+    margin-top: -0.5em;
+    padding: 0;
+    position: absolute;
+    top: 50%;
+    width: 100%; }
   header .circle {
     background-color: ivory;
     border: 1px solid black;
