--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,13 +17,32 @@
 {% assign locale = site.default_locale %}
 {% endunless %}
 
-<div id="header_image"></div>
+<table>
+  <tr>
+    <td id="a"></td>
+    <td rowspan="2" id="c"></td>
+    <td rowspan="2" id="d"></td>
+    <td rowspan="2" id="e"></td>
+    <td id="f"></td>
+  </tr>
+
+  <tr>
+    <td id="b"></td>
+    <td id="g"></td>
+  </tr>
+</table>
+
+<div class="description">
+  {{ site.data.i18n[locale].banner_description }}
+</div>
+
+<!--<div id="header_image"></div>
 <div id="next" onclick="javascript:switch_image(1);">
   <div class="bold centered huge symbol">&#xf429;</div>
 </div>
 <div id="previous" onclick="javascript:switch_image(-1);">
   <div class="bold centered huge symbol">&#xf430;</div>
-</div>
+</div>-->
 
 <label for="header_switcher">
   <div class="circle" id="hide_show"></div>
