header improvements, about page with short profile, text fixes

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -11,5 +11,5 @@
 <input type="radio" name="navigation" id="entry{{ forloop.index }}" />
 {% endif %}
 
-<a href="{{ item.url }}">{{ item.tooltip }}</a>
+<a href="{{ item.url }}">{{ item.text }}</a>
 {% endfor %}
