--- a/css/main.scss
+++ b/css/main.scss
@@ -75,11 +75,13 @@ $logoHeight: 20%;
 */
 
 .aperture { 
+    border: 1px solid $colDark;
 	@include vendor(border-radius, 50%);
 	@include vendor(box-shadow, 0 0 10px $colDark);
 }
 
 .bold { font-weight: bold; }
+.center { text-align: center; }
 .disabled { opacity: 0.25; }
 .huge { font-size: 3em; }
 .left { float: left; }
@@ -120,10 +122,23 @@ a {
     &:hover { border-bottom: 1px solid $colMiddle; }
 }
 
-a.anchor {
+a.anchor {    
     border: none;
     color: $colTextDark;
     font-weight: bold;
+}
+
+aside {
+    background-color: $colLight;
+    @include vendor(box-shadow, 0 0 10px $colDark);
+    border: 1px solid $colDark;
+    display: block;    
+    padding: 0.5em 1em;
+    margin-top: 0.25em;
+    margin-bottom: 0.5em;
+    margin-right: 1.5em;    
+    width: 100%;
+    max-width: 300px;    
 }
 
 body, html {
@@ -188,20 +203,8 @@ header {
     padding-top: $logoHeight;
     position: relative;
     top: -2px;    
-    @include vendor(transition, all 0.5s);
+    @include vendor(transition, none 0.5s);
     width: 100%;   
-
-    .description {
-        background-color: $colDarkTransparent;
-        top: 0em;
-        color: $colTextLight;
-        font-size: 0.667em;
-        font-weight: bold;
-        left: 0;                
-        padding: 0.5em;
-        padding-top: 0.667em;
-        position: absolute;
-    }    
 
     table {        
         border-bottom: 1px solid $colDark;        
@@ -259,10 +262,12 @@ header {
     }
 
     .circle {
-        background-color: $colBackground;        
+        background-color: $colLight;
         border: 1px solid $colDark;
-        border-radius: 3em;
-        bottom: -1.5em;
+        @include vendor(border-radius, 3em);
+        @include vendor(box-shadow, 0 0 5px $colDark);
+        //bottom: -1.5em;
+        top: -1.5em;
         cursor: pointer;
         display: block;        
         font-family: Genericons;        
@@ -270,13 +275,13 @@ header {
         left: 50%;
         line-height: 4.25em;                
         margin-left: -1.5em;
-        opacity: 0.5;
-        position: absolute;        
+        opacity: 0.75;
+        position: absolute;
         text-align: center;
         width: 3em;
 
         &:hover { 
-            box-shadow: 0 0 10px $colDark; 
+            @include vendor(box-shadow, 0 0 10px $colDark); 
             opacity: 1;
         }
     }
@@ -300,7 +305,12 @@ header {
 }
 
 #header_switcher:checked + header {
-    margin-top: -$logoHeight;    
+    margin-top: -$logoHeight;
+
+    .circle {
+        top: inherit;
+        bottom: -1.5em;
+    }    
 }
 
 #header_switcher:checked + header #hide_show:after { content: "\f431"; }    
@@ -391,3 +401,5 @@ ul.no_bullet {
         margin-left: 7em;
     }
 }
+
+
