css restructured, final font chosen

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -64,7 +64,7 @@
     </main>
 
     <footer>
-      &copy; 2014 Michael Schaefer<br/>
+      <small>&copy; 2014 Michael Schaefer</small>
     </footer>
 
   </div> 
