yet another font change, different small corrections

--- a/css/_classes.scss
+++ b/css/_classes.scss
@@ -1,3 +1,11 @@
+.anchor {    
+    border: none;
+    color: $colTextDark;
+    font-weight: bold;
+
+    &:hover { border: none; }
+}
+
 .aperture { 
     border: 1px solid $colDark;
 	@include vendor(border-radius, 50%);
