--- a/css/_font.css
+++ b/css/_font.css
@@ -1,8 +1,6 @@
 /*
 	webfonts
 */
-/*@import url(http://fonts.googleapis.com/css?family=Inconsolata:400,700);
-$fontName: "Inconsolata";*/
 /*
 	local fonts
 */
@@ -14,15 +12,8 @@ $fontName: "Inconsolata";*/
   font-style: normal; }
 
 @font-face {
-  font-family: 'Raleway';
-  src: url("../media/font/raleway-bold.eot");
-  src: url("../media/font/raleway-bold.eot?#iefix") format("embedded-opentype"), url("../media/font/raleway-bold.woff") format("woff"), url("../media/font/raleway-bold.ttf") format("truetype"), url("../media/font/raleway-bold.svg#ralewaybold") format("svg");
-  font-weight: bold;
-  font-style: normal; }
-
-@font-face {
-  font-family: 'Raleway';
-  src: url("../media/font/raleway-light.eot");
-  src: url("../media/font/raleway-light.eot?#iefix") format("embedded-opentype"), url("../media/font/raleway-light.woff") format("woff"), url("../media/font/raleway-light.ttf") format("truetype"), url("../media/font/raleway-light.svg#ralewaylight") format("svg");
+  font-family: "Inconsolata";
+  src: url("../media/font/inconsolata.eot");
+  src: url("../media/font/inconsolata.eot?#iefix") format("embedded-opentype"), url("../media/font/inconsolata.woff") format("woff"), url("../media/font/inconsolata.ttf") format("truetype"), url("../media/font/inconsolata.svg#inconsolatamedium") format("svg");
   font-weight: normal;
   font-style: normal; }
